--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: skyblue;
+    background-color: wheat;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .car-list {
