--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,10 @@ body {
     background-color: rgb(255, 255, 255);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url('../img/bg.jpg');
-    background-size: cover;
+    background-size: contain;
+    background-position: fixed;
+    background-attachment: fixed;
+
     margin: 0;
 }
 
@@ -33,17 +36,26 @@ img {
 
 .book-filter {
     display: flex;
+    flex-direction: column;
     width: 100%;
+    font-weight: 500;
+    gap:10px;
     padding: 20px 10px;
-    justify-content: space-around;
+    justify-content: flex-start;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.753);
     margin-bottom: 10px;
     box-shadow: 0 .2em 0.25em rgba(0, 0, 0, 0.329);
     
 }
-
+.book-filter p {
+    font-weight:600;
+ }
 .book-filter input {
-    width: 20%;
+    width: 100%;
+    border-radius: .3em;
+    border:none;
+    padding:10px;
 }
 
 .book-app .logo {
@@ -215,6 +227,9 @@ img {
     .book-filter {
         flex-direction: row;
     }
+    .book-filter input {
+        width: 20%;
+    }
     .book-details {
         padding: 40px;
     }
@@ -228,5 +243,6 @@ img {
     .book-details .sub-title {
         font-size: 2rem;
     }
+
     
 }
