--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@ body {
     background-color: rgb(255, 255, 255);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url('../img/bg.jpg');
-    background-size: contain;
+    background-size: cover;
     background-position: fixed;
     background-attachment: fixed;
 
@@ -224,6 +224,9 @@ img {
 }
 
 @media screen and (min-width:800px){
+    body {
+        background-attachment: fixed;
+    }
     .book-filter {
         flex-direction: row;
     }
