--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -270,9 +270,24 @@ textarea {
  .review{ 
     display:flex;
     flex-direction: column;
-    outline:1px solid gray;
+    outline:1px solid rgba(128, 128, 128, 0.514);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.336);
     padding:10px;
-    width:60%;
+    width:100%;
+    position:relative ;
+}
+.review button { 
+    position:absolute;
+    right:5%;
+    width: fit-content;
+    border: none;
+    background-color: rgb(160, 20, 44);
+    color: white;
+    padding: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: .25em;
+    box-shadow: 0 0em .2em rgba(0, 0, 0, 0.637);
 }
 
 .green {
@@ -314,5 +329,8 @@ textarea {
 
     .add-review-box { 
         width:20%;
+    }
+    .review{ 
+        width:60%;
     }
 }
