--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,6 @@ body {
     background-size: cover;
     background-position: fixed;
     background-attachment: fixed;
-
     margin: 0;
 }
 
@@ -20,9 +19,11 @@ h1, h2, h3, p {
 img {
     max-width: 100%;
 }
+
 input::placeholder {
-    color:rgb(177, 177, 177);
+    color: rgb(177, 177, 177);
 }
+
 .main-layout {
     max-width: 1200px;
     margin: 0 auto;
@@ -36,20 +37,25 @@ input::placeholder {
     padding: 0 20px;
 }
 
-.header { 
-    width:100%;
+.header {
+    width: 100%;
+    height: 75px;
+    background-color: rgba(245, 245, 220, 0.329);
+    margin-bottom: 25px;
+}
+
+.header nav {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height:75px;
+    gap: 10px;
 }
-.header nav  { 
-    display:flex;
-    gap:10px;
+
+.header nav a {
+    color: black;
+    font-size: 1.5rem
 }
-.header nav > * { 
-    color:white;
-    font-size:1.5rem
+
+.header nav a.active {
+    color: rgb(22, 22, 134);
 }
 
 .header .logo {
@@ -57,6 +63,13 @@ input::placeholder {
     padding: 20px 0;
     color: black;
     font-size: 2.5rem;
+    cursor: pointer;
+}
+
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .book-filter {
@@ -64,25 +77,25 @@ input::placeholder {
     flex-direction: column;
     width: 100%;
     font-weight: 500;
-    gap:10px;
+    gap: 10px;
     padding: 20px 10px;
     justify-content: flex-start;
     align-items: center;
-        background-color: rgba(255, 255, 255, 0.753);
+    background-color: rgba(255, 255, 255, 0.753);
     margin-bottom: 10px;
     box-shadow: 0 .2em 0.25em rgba(0, 0, 0, 0.329);
-    
 }
+
 .book-filter p {
-    font-weight:600;
- }
+    font-weight: 600;
+}
+
 .book-filter input {
     width: 100%;
     border-radius: .3em;
-    border:none;
-    padding:10px;
+    border: 1px solid rgba(128, 128, 128, 0.541);
+    padding: 10px;
 }
-
 
 .book-list {
     display: flex;
@@ -98,16 +111,15 @@ input::placeholder {
     box-shadow: rgba(1, 3, 5, 0.747) 0px 0.25em 0.5em;
     padding: 5px 10px;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.89);
+    background-color: rgb(240, 240, 240);
     cursor: pointer;
-    filter:brightness(0.9);
-    transition:filter .2s, box-shadow .2s ;
+    filter: brightness(1);
+    transition: filter .2s, box-shadow .2s;
 }
 
 .book-preview:hover {
     filter: brightness(1.4);
     box-shadow: rgb(1, 3, 5) 0px 0em 1em;
-
 }
 
 .book-title {
@@ -130,7 +142,7 @@ input::placeholder {
     flex-wrap: wrap;
     background-color: rgba(255, 255, 255, 0.959);
     box-shadow: 0 .2em 1em rgba(0, 0, 0, 0.637);
-    margin-bottom:50px;
+    margin-bottom: 50px;
 }
 
 .book-details .details-img {
@@ -149,7 +161,6 @@ input::placeholder {
     padding: 5px;
     border-radius: .25em;
     box-shadow: 0 .1em .2em rgba(0, 0, 0, 0.637);
-
 }
 
 .book-details .reading-type.sale {
@@ -178,7 +189,7 @@ input::placeholder {
 
 .book-details .sub-title {
     font-size: 1.25rem;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     color: rgb(117, 117, 117);
 }
 
@@ -221,64 +232,69 @@ input::placeholder {
 .book-details .back-btn {
     width: fit-content;
     border: none;
-    background-color: blue;
+    background-color: rgb(62, 62, 158);
     color: white;
     padding: 10px;
     margin-top: 20px;
     cursor: pointer;
     border-radius: .25em;
     box-shadow: 0 0em .2em rgba(0, 0, 0, 0.637);
+}
 
-}
-.add-review-box { 
-    width:100%;
-    display:flex;
+.add-review-box {
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
+}
 
-}
-.add-review-box .add-review{ 
+.add-review-box .add-review {
     display: flex;
     flex-direction: column;
-    width:100%;
-    
+    width: 100%;
 }
-.add-review-box .add-review form{ 
+
+.add-review-box .add-review form {
     display: flex;
     flex-direction: column;
-    width:100%;
-    gap:5px;
+    width: 100%;
+    gap: 5px;
 }
-.add-review-box .selection { 
+
+.add-review-box .selection {
     display: flex;
-    gap:20px;
+    gap: 20px;
     padding: 10px 0;
 }
-textarea { 
+
+textarea {
     resize: none;
 }
-.reviews-container { 
-    border-top:2px solid rgb(17, 107, 143);
-    width:100%;
-    overflow-y:scroll;
+
+.reviews-container {
+    border-top: 2px solid rgb(17, 107, 143);
+    width: 100%;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:10px;
-    padding:30px 10px;
+    gap: 10px;
+    padding: 30px 10px;
 }
- .review{ 
-    display:flex;
+
+.review {
+    display: flex;
     flex-direction: column;
-    outline:1px solid rgba(128, 128, 128, 0.514);
+    outline: 1px solid rgba(128, 128, 128, 0.514);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.336);
-    padding:10px;
-    width:100%;
-    position:relative ;
+    padding: 10px;
+    width: 100%;
+    position: relative;
 }
-.review button { 
-    position:absolute;
-    right:5%;
+
+.review button {
+    position: absolute;
+    right: 5%;
     width: fit-content;
     border: none;
     background-color: rgb(160, 20, 44);
@@ -298,10 +314,74 @@ textarea {
 .red {
     color: red;
     font-weight: bold;
-
 }
 
-@media screen and (min-width:800px){
+.home {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.856);
+    border-radius: 12px;
+    height: 80vh;
+}
+
+.home a {
+    width: 100%;
+}
+
+.home h1 {
+    font-size: 5rem;
+    margin-top: 100px;
+    color: black;
+    text-shadow: 2px 2px white;
+}
+
+.home h2 {
+    font-size: 3rem;
+    margin-top: 50px;
+    padding-bottom: 50px;
+    color: black;
+    text-shadow: 2px 2px white;
+    width: 75%;
+    text-align: center;
+    border-bottom: 1px solid black
+}
+
+.about-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: rgba(255, 255, 255, 0.856);
+    border-radius: 12px;
+    padding: 50px;
+    height: 80vh;
+    gap:40px;
+}
+
+.about-container h1 {
+    font-size: 4rem;
+    width:100%;
+    text-align: center;
+}
+.about-img { 
+    width:45%;
+    border-radius: 25px;
+    object-fit: cover;
+    height:400px;
+}
+.text-container {
+    width:45%;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    gap:50px;
+}
+.text-container p  {
+    font-size:1.5rem;
+}
+
+@media screen and (min-width:800px) {
     body {
         background-attachment: fixed;
     }
@@ -313,24 +393,22 @@ textarea {
     }
     .book-details {
         padding: 40px;
-        gap:80px;
+        gap: 80px;
     }
-    .book-details .more-details { 
+    .book-details .more-details {
         width: 30%;
         font-size: 1.2rem;
     }
-
     .book-details .title {
         font-size: 2.5rem;
     }
     .book-details .sub-title {
         font-size: 2rem;
     }
-
-    .add-review-box { 
-        width:20%;
+    .add-review-box {
+        width: 20%;
     }
-    .review{ 
-        width:60%;
+    .review {
+        width: 60%;
     }
 }
