--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,9 +41,16 @@ input::placeholder {
     width: 100%;
     height: 75px;
     background-color: rgba(245, 245, 220, 0.329);
-    margin-bottom: 25px;
+    margin-bottom:50px;
+
 }
 
+.main-header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height:100%;
+}
 .header nav {
     display: flex;
     gap: 10px;
@@ -59,18 +66,14 @@ input::placeholder {
 }
 
 .header .logo {
-    align-self: flex-start;
-    padding: 20px 0;
+    align-self: center;
+    padding: 0px 20px;
+    height:auto;
     color: black;
-    font-size: 2.5rem;
+    font-size: 1.rem;
     cursor: pointer;
 }
 
-.main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
 .book-filter {
     display: flex;
@@ -384,6 +387,14 @@ textarea {
 @media screen and (min-width:800px) {
     body {
         background-attachment: fixed;
+    }
+    .header {
+        height: 75px;
+        margin-bottom: 25px;
+    }
+    .header .logo {
+        padding: 20px 0;
+        font-size: 2.5rem;
     }
     .book-filter {
         flex-direction: row;
