--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -392,6 +392,12 @@ textarea {
         height: 75px;
         margin-bottom: 25px;
     }
+    .main-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height:100%;
+    }
     .header .logo {
         padding: 20px 0;
         font-size: 2.5rem;
