--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -323,9 +323,11 @@ textarea {
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
     background-color: rgba(255, 255, 255, 0.856);
     border-radius: 12px;
-    height: 80vh;
+    height:auto;
+    width:95%;
 }
 
 .home a {
@@ -333,14 +335,16 @@ textarea {
 }
 
 .home h1 {
-    font-size: 5rem;
-    margin-top: 100px;
+    font-size: 3rem;
+    margin-top: 50px;
     color: black;
     text-shadow: 2px 2px white;
+    width:auto;
+    text-align: center;
 }
 
 .home h2 {
-    font-size: 3rem;
+    font-size: 1.5rem;
     margin-top: 50px;
     padding-bottom: 50px;
     color: black;
@@ -393,10 +397,7 @@ textarea {
         margin-bottom: 25px;
     }
     .main-header {
-        display: flex;
         justify-content: space-between;
-        align-items: center;
-        height:100%;
     }
     .header .logo {
         padding: 20px 0;
@@ -428,4 +429,20 @@ textarea {
     .review {
         width: 60%;
     }
+    .home { 
+        width:100%;
+        height: 80vh;
+
+    }
+    .home h1 {
+        font-size: 5rem;
+        margin-top: 100px;
+    }
+    
+.home h2 {
+    font-size: 3rem;
+    margin-top: 50px;
+    padding-bottom: 50px;
+
+}
 }
