--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,16 +41,16 @@ input::placeholder {
     width: 100%;
     height: 75px;
     background-color: rgba(245, 245, 220, 0.329);
-    margin-bottom:50px;
-
+    margin-bottom: 50px;
 }
 
 .main-header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    height:100%;
+    height: 100%;
 }
+
 .header nav {
     display: flex;
     gap: 10px;
@@ -68,12 +68,11 @@ input::placeholder {
 .header .logo {
     align-self: center;
     padding: 0px 20px;
-    height:auto;
+    height: auto;
     color: black;
     font-size: 1.rem;
     cursor: pointer;
 }
-
 
 .book-filter {
     display: flex;
@@ -326,8 +325,8 @@ textarea {
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.856);
     border-radius: 12px;
-    height:auto;
-    width:95%;
+    height: auto;
+    width: 95%;
 }
 
 .home a {
@@ -339,7 +338,7 @@ textarea {
     margin-top: 50px;
     color: black;
     text-shadow: 2px 2px white;
-    width:auto;
+    width: auto;
     text-align: center;
 }
 
@@ -361,31 +360,33 @@ textarea {
     flex-wrap: wrap;
     background-color: rgba(255, 255, 255, 0.856);
     border-radius: 12px;
-    padding: 50px;
-    height: 80vh;
-    gap:40px;
+    padding: 10px;
+    gap: 20px;
 }
 
 .about-container h1 {
-    font-size: 4rem;
-    width:100%;
+    font-size: 3rem;
+    width: 100%;
     text-align: center;
 }
-.about-img { 
-    width:45%;
+
+.about-img {
+    width: 100%;
     border-radius: 25px;
     object-fit: cover;
-    height:400px;
+    height: 400px;
 }
+
 .text-container {
-    width:45%;
+    width: 90%;
     font-weight: 400;
     display: flex;
     flex-direction: column;
-    gap:50px;
+    gap: 20px;
 }
-.text-container p  {
-    font-size:1.5rem;
+
+.text-container p {
+    font-size: 1.5rem;
 }
 
 @media screen and (min-width:800px) {
@@ -429,20 +430,41 @@ textarea {
     .review {
         width: 60%;
     }
-    .home { 
-        width:100%;
+    .home {
+        width: 100%;
         height: 80vh;
-
     }
     .home h1 {
         font-size: 5rem;
         margin-top: 100px;
     }
-    
-.home h2 {
-    font-size: 3rem;
-    margin-top: 50px;
-    padding-bottom: 50px;
+    .home h2 {
+        font-size: 3rem;
+        margin-top: 50px;
+        padding-bottom: 50px;
+    }
+    .about-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        background-color: rgba(255, 255, 255, 0.856);
+        border-radius: 12px;
+        padding: 50px;
+        height: 80vh;
+        gap: 40px;
+    }
+    .about-container h1 {
+        font-size: 4rem;
+ 
+    }
+    .about-img {
+        width: 45%;
 
-}
+    }
+    .text-container {
+        width: 45%;
+
+        gap: 50px;
+    }
 }
