--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+@import './base.css';
+/* 
 * {
     box-sizing: border-box;
 }
@@ -27,7 +29,7 @@ input::placeholder {
 .main-layout {
     max-width: 1200px;
     margin: 0 auto;
-}
+} */
 
 .book-app {
     display: flex;
