--- a/assets/css/cmps/usr-msg.css
+++ b/assets/css/cmps/usr-msg.css
@@ -4,4 +4,21 @@
     left:20px;
     background-color:rgb(50, 50, 190);
     color:white;
+    display: flex;
+    padding:20px;
+    gap:20px;
+    justify-content: space-between;
+    border-radius: .5em;
+    box-shadow: 0 0 0px 5px rgba(255, 255, 255, 0.863),
+     0 0 0px 10px rgba(50, 50, 190, 0.705);
+
+}
+.user-msg a { 
+    color :white;
+}
+.user-msg button{ 
+    background-color: rgba(255, 255, 255, 0.329);
+    color:white;
+    border:1px solid rgba(0, 0, 0, 0.603);
+    border-radius: .5em;
 }
