--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,13 +243,13 @@ input::placeholder {
     text-decoration: underline;
     cursor: pointer;
 }
-.bottom-btns { 
+.top-btns { 
     display:flex;
     width:100%;
     justify-content: space-between;
 
 }
-.bottom-btns a{ 
+.top-btns a{ 
     color:white;
     text-decoration: none;
 }
@@ -433,7 +433,7 @@ textarea {
     }
     .book-details {
         padding: 40px;
-        gap: 80px;
+        gap:  30px 80px;
     }
     .book-details .more-details {
         width: 30%;
