--- a/assets/css/cmps/usr-msg.css
+++ b/assets/css/cmps/usr-msg.css
@@ -6,19 +6,44 @@
     color:white;
     display: flex;
     padding:20px;
-    gap:20px;
+    gap:5px;
     justify-content: space-between;
+    align-items: center;
     border-radius: .5em;
     box-shadow: 0 0 0px 5px rgba(255, 255, 255, 0.863),
      0 0 0px 10px rgba(50, 50, 190, 0.705);
-
+     font-size:.9rem;
+     max-width:90%;
 }
 .user-msg a { 
     color :white;
+}
+.user-msg img { 
+    height:50px;
 }
 .user-msg button{ 
     background-color: rgba(255, 255, 255, 0.329);
     color:white;
     border:1px solid rgba(0, 0, 0, 0.603);
     border-radius: .5em;
+    padding:5px 8px;
+    align-self: flex-start;
+}
+@media screen and (min-width:800px) {
+    .user-msg { 
+        position:fixed;
+        bottom:20px;
+        left:20px;
+        background-color:rgb(50, 50, 190);
+        color:white;
+        display: flex;
+        padding:20px;
+        gap:20px;
+        justify-content: space-between;
+        border-radius: .5em;
+        box-shadow: 0 0 0px 5px rgba(255, 255, 255, 0.863),
+         0 0 0px 10px rgba(50, 50, 190, 0.705);
+         max-width:100%;
+
+    }
 }
