--- a/assets/css/pages/book-add.css
+++ b/assets/css/pages/book-add.css
@@ -1,11 +1,12 @@
 .book-add { 
     background-color: rgba(0, 0, 0, 0.753);
     color:white;
-    padding:40px;
+    padding:20px;
     border-radius:12px;
     display:flex;
     flex-wrap: wrap;
     gap:10px;
+    width:95%;
 }
 .book-add h1{ 
     font-size:1.5rem;
@@ -25,10 +26,14 @@
 
 .book-add .search-list ul { 
     list-style-type: square;
+    list-style-image: url(/assets/img/book-icon.png);
+    
 }
 .book-add .search-list li { 
-    font-size:1.5rem;
+    font-size:1rem;
     margin-top:10px;
+    position:relative;
+    margin-inline-start:10px ;
 }
 .book-add .search-list li button{ 
     background-color: rgba(255, 255, 255, 0.13);
@@ -39,6 +44,16 @@
     font-size:1rem;
     margin-inline-start: 20px;
     cursor:pointer
-    
-    
+}
+
+@media screen and (min-width:800px) {
+    .book-add { 
+        padding:40px;
+        width:100%;
+
+    }
+    .book-add .search-list li { 
+        font-size:1.5rem;
+        margin-top:10px;
+    }
 }
