--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,491 +1,16 @@
 @import './base.css';
-@import './pages/book-add.css';
+@import './cmps/header.css';
 @import './cmps/usr-msg.css';
-/* 
-* {
-    box-sizing: border-box;
-}
+@import './cmps/book-filter.css';
+@import './cmps/book-list.css';
+@import './cmps/book-preview.css';
+@import './cmps/long-txt.css';
+@import './cmps/review-add.css';
+@import './cmps/review.css';
+@import './pages/home.css';
+@import './pages/book-add.css';
+@import './pages/book-app.css';
+@import './pages/book-details.css';
+@import './pages/about.css';
 
-body {
-    background-color: rgb(255, 255, 255);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: url('../img/bg.jpg');
-    background-size: cover;
-    background-position: fixed;
-    background-attachment: fixed;
-    margin: 0;
-}
 
-h1, h2, h3, p {
-    margin: 0;
-}
-
-img {
-    max-width: 100%;
-}
-
-input::placeholder {
-    color: rgb(177, 177, 177);
-}
-
-.main-layout {
-    max-width: 1200px;
-    margin: 0 auto;
-} */
-
-.book-app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    padding: 0 20px;
-}
-
-.header {
-    width: 100%;
-    height: 75px;
-    background-color: rgba(245, 245, 220, 0.329);
-    margin-bottom: 50px;
-}
-
-.main-header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100%;
-}
-
-.header nav {
-    display: flex;
-    gap: 10px;
-}
-
-.header nav a {
-    color: black;
-    font-size: 1.5rem
-}
-
-.header nav a.active {
-    color: rgb(22, 22, 134);
-}
-
-.header .logo {
-    align-self: center;
-    padding: 0px 20px;
-    height: auto;
-    color: black;
-    font-size: 1.rem;
-    cursor: pointer;
-}
-
-.book-filter {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    font-weight: 500;
-    gap: 10px;
-    padding: 20px 10px;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.753);
-    margin-bottom: 10px;
-    box-shadow: 0 .2em 0.25em rgba(0, 0, 0, 0.329);
-}
-
-.book-filter p {
-    font-weight: 600;
-}
-
-.book-filter input {
-    width: 100%;
-    border-radius: .3em;
-    border: 1px solid rgba(128, 128, 128, 0.541);
-    padding: 10px;
-}
-
-.book-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding-top: 30px;
-    justify-content: center;
-    background-color: rgba(43, 43, 43, 0.719);
-}
-
-.book-preview {
-    width: 250px;
-    box-shadow: rgba(1, 3, 5, 0.747) 0px 0.25em 0.5em;
-    padding: 5px 10px;
-    text-align: center;
-    background-color: rgb(240, 240, 240);
-    cursor: pointer;
-    filter: brightness(1);
-    transition: filter .2s, box-shadow .2s;
-}
-.book-preview img {
-    width:80%;
-}
-
-.book-preview:hover {
-    filter: brightness(1.4);
-    box-shadow: rgb(1, 3, 5) 0px 0em 1em;
-}
-
-.book-title {
-    font-size: 1.1rem;
-    text-transform: capitalize;
-    margin-bottom: 10px;
-}
-
-.book-price {
-    margin-bottom: 10px;
-}
-
-.book-details {
-    display: flex;
-    gap: 20px;
-    align-items: flex-start;
-    width: 100%;
-    padding: 40px;
-    border-radius: .5em;
-    flex-wrap: wrap;
-    background-color: rgba(255, 255, 255, 0.959);
-    box-shadow: 0 .2em 1em rgba(0, 0, 0, 0.637);
-    margin-bottom: 50px;
-}
-
-.book-details .details-img {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-}
-
-.book-details .reading-type {
-    position: absolute;
-    top: 5%;
-    margin-inline-start: 5%;
-    color: white;
-    background-color: rgb(71, 74, 255);
-    padding: 5px;
-    border-radius: .25em;
-    box-shadow: 0 .1em .2em rgba(0, 0, 0, 0.637);
-}
-
-.book-details .reading-type.sale {
-    bottom: 15%;
-    top: unset;
-    color: black;
-    font-size: 2rem;
-    font-weight: lighter;
-    background-color: gold;
-}
-
-.book-details .more-details {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 100%;
-    font-size: 1rem;
-    justify-content: stretch;
-    height: 100%;
-}
-
-.book-details .title {
-    font-size: 2rem;
-    text-transform: capitalize;
-}
-
-.book-details .sub-title {
-    font-size: 1.25rem;
-    margin-bottom: 10px;
-    color: rgb(117, 117, 117);
-    
-}
-
-.book-details b {
-    font-weight: inherit;
-
-}
-
-.book-details .sub-title::first-letter {
-    text-transform: capitalize;
-}
-
-.book-details .price span.sale {
-    color: rgb(49, 39, 39);
-    padding: 2px 5px;
-    background-color: gold;
-}
-
-.book-details .categories {
-    display: flex;
-    gap: 10px;
-}
-
-.book-details .categories .category {
-    background-color: rgb(158, 158, 158);
-    color: white;
-    padding: 2px 5px;
-    border-radius: .25em;
-}
-
-.text-box {
-    max-width: 350px;
-}
-
-.text-box::first-letter {
-    text-transform: capitalize;
-}
-
-.text-box .more-less {
-    font-weight: 600;
-    text-decoration: underline;
-    cursor: pointer;
-}
-.top-btns { 
-    display:flex;
-    width:100%;
-    justify-content: space-between;
-
-}
-.top-btns a{ 
-    color:white;
-    text-decoration: none;
-}
-.book-details .back-btn {
-    width: fit-content;
-    border: none;
-    background-color: rgb(62, 62, 158);
-    color: white;
-    padding: 10px;
-    margin-top: 20px;
-    cursor: pointer;
-    border-radius: .25em;
-    box-shadow: 0 0em .2em rgba(0, 0, 0, 0.637);
-}
-
-.add-review-box {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.add-review-box .add-review {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.add-review-box .add-review form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 5px;
-}
-
-.add-review-box .selection {
-    display: flex;
-    gap: 20px;
-    padding: 10px 0;
-}
-
-textarea {
-    resize: none;
-}
-
-.reviews-container {
-    border-top: 2px solid rgb(17, 107, 143);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    padding: 30px 10px;
-}
-
-.review {
-    display: flex;
-    flex-direction: column;
-    outline: 1px solid rgba(128, 128, 128, 0.514);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.336);
-    padding: 10px;
-    width: 100%;
-    position: relative;
-}
-
-.review button {
-    position: absolute;
-    right: 5%;
-    width: fit-content;
-    border: none;
-    background-color: rgb(160, 20, 44);
-    color: white;
-    padding: 10px;
-    margin-top: 20px;
-    cursor: pointer;
-    border-radius: .25em;
-    box-shadow: 0 0em .2em rgba(0, 0, 0, 0.637);
-}
-
-.green {
-    color: green;
-    font-weight: bold;
-}
-
-.red {
-    color: red;
-    font-weight: bold;
-}
-
-.home {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    background-color: rgba(255, 255, 255, 0.856);
-    border-radius: 12px;
-    height: auto;
-    width: 95%;
-}
-
-.home a {
-    width: 100%;
-}
-
-.home h1 {
-    font-size: 3rem;
-    margin-top: 50px;
-    color: black;
-    text-shadow: 2px 2px white;
-    width: auto;
-    text-align: center;
-}
-
-.home h2 {
-    font-size: 1.5rem;
-    margin-top: 50px;
-    padding-bottom: 50px;
-    color: black;
-    text-shadow: 2px 2px white;
-    width: 75%;
-    text-align: center;
-    border-bottom: 1px solid black
-}
-
-.about-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-color: rgba(255, 255, 255, 0.856);
-    border-radius: 12px;
-    padding: 10px;
-    gap: 20px;
-}
-
-.about-container h1 {
-    font-size: 3rem;
-    width: 100%;
-    text-align: center;
-}
-
-.about-img {
-    width: 100%;
-    border-radius: 25px;
-    object-fit: cover;
-    height: 400px;
-}
-
-.text-container {
-    width: 90%;
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.text-container p {
-    font-size: 1.5rem;
-}
-
-@media screen and (min-width:800px) {
-    body {
-        background-attachment: fixed;
-    }
-    .header {
-        height: 75px;
-        margin-bottom: 25px;
-    }
-    .main-header {
-        justify-content: space-between;
-    }
-    .header .logo {
-        padding: 20px 0;
-        font-size: 2.5rem;
-    }
-    .book-filter {
-        flex-direction: row;
-    }
-    .book-filter input {
-        width: 20%;
-    }
-    .book-details {
-        padding: 40px;
-        gap:  30px 80px;
-    }
-    .book-details .more-details {
-        width: 30%;
-        font-size: 1.2rem;
-    }
-    .book-details .title {
-        font-size: 2.5rem;
-    }
-    .book-details .sub-title {
-        font-size: 1.5rem;
-    }
-    .add-review-box {
-        width: 20%;
-    }
-    .review {
-        width: 60%;
-    }
-    .home {
-        width: 100%;
-        height: 80vh;
-    }
-    .home h1 {
-        font-size: 5rem;
-        margin-top: 100px;
-    }
-    .home h2 {
-        font-size: 3rem;
-        margin-top: 50px;
-        padding-bottom: 50px;
-    }
-    .about-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        background-color: rgba(255, 255, 255, 0.856);
-        border-radius: 12px;
-        padding: 50px;
-        height: 80vh;
-        gap: 40px;
-    }
-    .about-container h1 {
-        font-size: 4rem;
- 
-    }
-    .about-img {
-        width: 45%;
-
-    }
-    .text-container {
-        width: 45%;
-
-        gap: 50px;
-    }
-}
