--- a/assets/css/cmps/header.css
+++ b/assets/css/cmps/header.css
@@ -7,23 +7,39 @@
 
 .main-header {
     display: flex;
-    justify-content: flex-start;
     align-items: center;
     height: 100%;
+    justify-content: space-between
 }
 
 .header nav {
     display: flex;
     gap: 10px;
+    position: fixed;
+    flex-direction: column;
+    background-color: rgb(62, 62, 158);
+    top: 0px;
+    right: 0;
+    width: 100%;
+    height: 50%;
+    z-index: 1;
+    justify-content: space-around;
+    text-align: center;
+    transform: translateX(-100%);
+
+    transition: transform .2s;
+}
+.header nav.mobile{
+    transform: translateX(0);
 }
 
 .header nav a {
-    color: black;
+    color: white;
     font-size: 1.5rem
 }
 
 .header nav a.active {
-    color: rgb(22, 22, 134);
+    color: rgb(140, 140, 255);
 }
 
 .header .logo {
@@ -33,6 +49,13 @@
     color: black;
     font-size: 1.rem;
     cursor: pointer;
+}
+
+.menu-btn-mobile {
+    justify-self: flex-end;
+    margin-inline-end: 10px;
+    z-index:1;
+    background-color:rgba(0, 0, 0, 0.438);
 }
 
 @media screen and (min-width:800px) {
@@ -46,5 +69,30 @@
     .header .logo {
         padding: 20px 0;
         font-size: 2.5rem;
+    }
+    .menu-btn-mobile {
+        display: none;
+    }
+    .header nav {
+        position: unset;
+        display: flex;
+        flex-direction: unset;
+        width: unset;
+        background-color: transparent;
+        top: unset;
+        right: unset;
+        height: unset;
+        z-index: unset;
+        text-align: unset;
+        transform: translateX(0);
+
+    }
+    .header nav a {
+        color: black;
+        font-size: 1.5rem
+    }
+    .header nav a.active {
+        color:  rgb(62, 62, 158);
+        font-weight: bold;
     }
 }
