--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -16,7 +16,8 @@
 
 .home h1 {
     font-size: 3rem;
-    margin-top: 50px;
+    margin-top: 20px;
+    padding:20px;
     color: black;
     text-shadow: 2px 2px white;
     width: auto;
@@ -25,7 +26,7 @@
 
 .home h2 {
     font-size: 1.5rem;
-    margin-top: 50px;
+    margin-top: 10px;
     padding-bottom: 50px;
     color: black;
     text-shadow: 2px 2px white;
@@ -38,10 +39,7 @@
     width: 100%;
     height: 80vh;
 }
-.home h1 {
-    font-size: 5rem;
-    margin-top: 100px;
-}
+
 
 @media screen and (min-width:800px) {
 
@@ -49,5 +47,9 @@
     font-size: 3rem;
     margin-top: 50px;
     padding-bottom: 50px;
+}
+.home h1 {
+    font-size: 5rem;
+    margin-top: 100px;
 }
 }
